--- a/mockProjects.json
+++ b/mockProjects.json
@@ -13,7 +13,7 @@
 "to_do": [
   {
     "description": "Message employees on LinkedIn",
-    "completed": false,
+    "completed": true,
     "order": 1
   },
   {
