dynamic contact cards

--- a/mockProjects.json
+++ b/mockProjects.json
@@ -36,25 +36,25 @@
   {
     "contact_name": "Joe Shmoe",
     "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
-    "contact_emaili": "joeshmoe@gmail.com",
+    "contact_email": "joeshmoe@gmail.com",
     "contact_phone": "123-456-7890"
   },
   {
     "contact_name": "Joe Shmoe",
     "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
-    "contact_emaili": "joeshmoe@gmail.com",
+    "contact_email": "joeshmoe@gmail.com",
     "contact_phone": "123-456-7890"
   },
   {
     "contact_name": "Joe Shmoe",
     "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
-    "contact_emaili": "joeshmoe@gmail.com",
+    "contact_email": "joeshmoe@gmail.com",
     "contact_phone": "123-456-7890"
   },
   {
     "contact_name": "Joe Shmoe",
     "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
-    "contact_emaili": "joeshmoe@gmail.com",
+    "contact_email": "joeshmoe@gmail.com",
     "contact_phone": "123-456-7890"
   }
 ],
