contact card feature

--- a/mockProjects.json
+++ b/mockProjects.json
@@ -36,8 +36,12 @@
   {
     "contact_name": "Joe Shmoe",
     "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
-    "contact_email": "joeshmoe@gmail.com",
-    "contact_phone": "123-456-7890"
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
   },
   {
     "contact_name": "Joe Shmoe",
@@ -48,13 +52,6 @@
   {
     "contact_name": "Joe Shmoe",
     "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
-    "contact_email": "joeshmoe@gmail.com",
-    "contact_phone": "123-456-7890"
-  },
-  {
-    "contact_name": "Joe Shmoe",
-    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
-    "contact_email": "joeshmoe@gmail.com",
     "contact_phone": "123-456-7890"
   }
 ],
