wrapping job cards on dashboard

--- a/mockProjects.json
+++ b/mockProjects.json
@@ -229,4 +229,312 @@
   }
 ],
 "notes": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+},{
+  "role": {
+    "_id": "123456789",
+    "role_name": "Frontend Developer",
+    "company": {
+      "company_name": "Google",
+      "company_website": "https://google.com",
+      "compant_linkedin": "https://www.linkedin.com/company/google/"
+    },
+    "application_link": "https://google.com",
+    "job_description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+    "due_date": "October 1, 2023"
+  }, 
+"to_do": [
+  {
+    "description": "Message employees on LinkedIn",
+    "completed": true,
+    "order": 1
+  },
+  {
+    "description": "Tailor resume",
+    "completed": false,
+    "order": 2
+  },
+  {
+    "description": "Write cover letter",
+    "completed": false,
+    "order": 3
+  },
+  {
+    "description": "Submit application",
+    "completed": false,
+    "order": 4
+  }
+],
+"contacts": [
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com",
+    "contact_phone": "123-456-7890"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_phone": "123-456-7890"
+  }
+],
+"files": [
+  {
+    "file_type": "Google Doc",
+    "file_link": "https://docs.google.com"
+  },
+  {
+    "file_type": "Google Folder",
+    "file_link": "https://drive.google.com"
+  },
+  {
+    "file_type": "Google Slide",
+    "file_link": "https://slides.google.com"
+  },
+  {
+    "file_type": "Google Sheets",
+    "file_link": "https://sheets.google.com"
+  }
+],
+"notes": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+},{
+  "role": {
+    "_id": "123456789",
+    "role_name": "Frontend Developer",
+    "company": {
+      "company_name": "Google",
+      "company_website": "https://google.com",
+      "compant_linkedin": "https://www.linkedin.com/company/google/"
+    },
+    "application_link": "https://google.com",
+    "job_description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+    "due_date": "October 1, 2023"
+  }, 
+"to_do": [
+  {
+    "description": "Message employees on LinkedIn",
+    "completed": true,
+    "order": 1
+  },
+  {
+    "description": "Tailor resume",
+    "completed": false,
+    "order": 2
+  },
+  {
+    "description": "Write cover letter",
+    "completed": false,
+    "order": 3
+  },
+  {
+    "description": "Submit application",
+    "completed": false,
+    "order": 4
+  }
+],
+"contacts": [
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com",
+    "contact_phone": "123-456-7890"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_phone": "123-456-7890"
+  }
+],
+"files": [
+  {
+    "file_type": "Google Doc",
+    "file_link": "https://docs.google.com"
+  },
+  {
+    "file_type": "Google Folder",
+    "file_link": "https://drive.google.com"
+  },
+  {
+    "file_type": "Google Slide",
+    "file_link": "https://slides.google.com"
+  },
+  {
+    "file_type": "Google Sheets",
+    "file_link": "https://sheets.google.com"
+  }
+],
+"notes": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+},{
+  "role": {
+    "_id": "123456789",
+    "role_name": "Frontend Developer",
+    "company": {
+      "company_name": "Google",
+      "company_website": "https://google.com",
+      "compant_linkedin": "https://www.linkedin.com/company/google/"
+    },
+    "application_link": "https://google.com",
+    "job_description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+    "due_date": "October 1, 2023"
+  }, 
+"to_do": [
+  {
+    "description": "Message employees on LinkedIn",
+    "completed": true,
+    "order": 1
+  },
+  {
+    "description": "Tailor resume",
+    "completed": false,
+    "order": 2
+  },
+  {
+    "description": "Write cover letter",
+    "completed": false,
+    "order": 3
+  },
+  {
+    "description": "Submit application",
+    "completed": false,
+    "order": 4
+  }
+],
+"contacts": [
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com",
+    "contact_phone": "123-456-7890"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_phone": "123-456-7890"
+  }
+],
+"files": [
+  {
+    "file_type": "Google Doc",
+    "file_link": "https://docs.google.com"
+  },
+  {
+    "file_type": "Google Folder",
+    "file_link": "https://drive.google.com"
+  },
+  {
+    "file_type": "Google Slide",
+    "file_link": "https://slides.google.com"
+  },
+  {
+    "file_type": "Google Sheets",
+    "file_link": "https://sheets.google.com"
+  }
+],
+"notes": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+},{
+  "role": {
+    "_id": "123456789",
+    "role_name": "Frontend Developer",
+    "company": {
+      "company_name": "Google",
+      "company_website": "https://google.com",
+      "compant_linkedin": "https://www.linkedin.com/company/google/"
+    },
+    "application_link": "https://google.com",
+    "job_description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+    "due_date": "October 1, 2023"
+  }, 
+"to_do": [
+  {
+    "description": "Message employees on LinkedIn",
+    "completed": true,
+    "order": 1
+  },
+  {
+    "description": "Tailor resume",
+    "completed": false,
+    "order": 2
+  },
+  {
+    "description": "Write cover letter",
+    "completed": false,
+    "order": 3
+  },
+  {
+    "description": "Submit application",
+    "completed": false,
+    "order": 4
+  }
+],
+"contacts": [
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_email": "joeshmoe@gmail.com",
+    "contact_phone": "123-456-7890"
+  },
+  {
+    "contact_name": "Joe Shmoe",
+    "contact_linkedin": "https://www.linkedin.com/in/alec-downing",
+    "contact_phone": "123-456-7890"
+  }
+],
+"files": [
+  {
+    "file_type": "Google Doc",
+    "file_link": "https://docs.google.com"
+  },
+  {
+    "file_type": "Google Folder",
+    "file_link": "https://drive.google.com"
+  },
+  {
+    "file_type": "Google Slide",
+    "file_link": "https://slides.google.com"
+  },
+  {
+    "file_type": "Google Sheets",
+    "file_link": "https://sheets.google.com"
+  }
+],
+"notes": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 }]
