--- a/mockProjects.json
+++ b/mockProjects.json
@@ -64,7 +64,7 @@
     "file_link": "https://docs.google.com"
   },
   {
-    "file_type": "Google Folder",
+    "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
@@ -72,7 +72,7 @@
     "file_link": "https://slides.google.com"
   },
   {
-    "file_type": "Google Sheets",
+    "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
 ],
@@ -143,7 +143,7 @@
     "file_link": "https://docs.google.com"
   },
   {
-    "file_type": "Google Folder",
+    "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
@@ -151,7 +151,7 @@
     "file_link": "https://slides.google.com"
   },
   {
-    "file_type": "Google Sheets",
+    "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
 ],
@@ -222,7 +222,7 @@
     "file_link": "https://docs.google.com"
   },
   {
-    "file_type": "Google Folder",
+    "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
@@ -230,7 +230,7 @@
     "file_link": "https://slides.google.com"
   },
   {
-    "file_type": "Google Sheets",
+    "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
 ],
@@ -301,7 +301,7 @@
     "file_link": "https://docs.google.com"
   },
   {
-    "file_type": "Google Folder",
+    "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
@@ -309,7 +309,7 @@
     "file_link": "https://slides.google.com"
   },
   {
-    "file_type": "Google Sheets",
+    "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
 ],
@@ -380,7 +380,7 @@
     "file_link": "https://docs.google.com"
   },
   {
-    "file_type": "Google Folder",
+    "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
@@ -388,7 +388,7 @@
     "file_link": "https://slides.google.com"
   },
   {
-    "file_type": "Google Sheets",
+    "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
 ],
@@ -459,7 +459,7 @@
     "file_link": "https://docs.google.com"
   },
   {
-    "file_type": "Google Folder",
+    "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
@@ -467,7 +467,7 @@
     "file_link": "https://slides.google.com"
   },
   {
-    "file_type": "Google Sheets",
+    "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
 ],
@@ -538,7 +538,7 @@
     "file_link": "https://docs.google.com"
   },
   {
-    "file_type": "Google Folder",
+    "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
@@ -546,7 +546,7 @@
     "file_link": "https://slides.google.com"
   },
   {
-    "file_type": "Google Sheets",
+    "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
 ],
