--- a/mockProjects.json
+++ b/mockProjects.json
@@ -60,18 +60,22 @@
 ],
 "files": [
   {
+    "file_name": "My Resume",
     "file_type": "Google Doc",
     "file_link": "https://docs.google.com"
   },
   {
+    "file_name": "Materials",
     "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
+    "file_name": "Presentation",
     "file_type": "Google Slide",
     "file_link": "https://slides.google.com"
   },
   {
+    "file_name": "Statistics",
     "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
@@ -139,18 +143,22 @@
 ],
 "files": [
   {
+    "file_name": "My Resume",
     "file_type": "Google Doc",
     "file_link": "https://docs.google.com"
   },
   {
+    "file_name": "Materials",
     "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
+    "file_name": "Presentation",
     "file_type": "Google Slide",
     "file_link": "https://slides.google.com"
   },
   {
+    "file_name": "Statistics",
     "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
@@ -218,18 +226,22 @@
 ],
 "files": [
   {
+    "file_name": "Resume",
     "file_type": "Google Doc",
     "file_link": "https://docs.google.com"
   },
   {
+    "file_name": "Materials",
     "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
+    "file_name": "Presentation",
     "file_type": "Google Slide",
     "file_link": "https://slides.google.com"
   },
   {
+    "file_name": "Statistics",
     "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
@@ -297,18 +309,22 @@
 ],
 "files": [
   {
+    "file_name": "Resume",
     "file_type": "Google Doc",
     "file_link": "https://docs.google.com"
   },
   {
+    "file_name": "Materials",
     "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
+    "file_name": "Presentation",
     "file_type": "Google Slide",
     "file_link": "https://slides.google.com"
   },
   {
+    "file_name": "Statistics",
     "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
@@ -376,18 +392,22 @@
 ],
 "files": [
   {
+    "file_name": "Resume",
     "file_type": "Google Doc",
     "file_link": "https://docs.google.com"
   },
   {
+    "file_name": "Materials",
     "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
+    "file_name": "Presentation",
     "file_type": "Google Slide",
     "file_link": "https://slides.google.com"
   },
   {
+    "file_name": "Statistics",
     "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
@@ -455,18 +475,22 @@
 ],
 "files": [
   {
+    "file_name": "Resume",
     "file_type": "Google Doc",
     "file_link": "https://docs.google.com"
   },
   {
+    "file_name": "Materials",
     "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
+    "file_name": "Presentation",
     "file_type": "Google Slide",
     "file_link": "https://slides.google.com"
   },
   {
+    "file_name": "Statistics",
     "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
@@ -534,18 +558,22 @@
 ],
 "files": [
   {
+    "file_name": "Resume",
     "file_type": "Google Doc",
     "file_link": "https://docs.google.com"
   },
   {
+    "file_name": "Materials",
     "file_type": "Folder",
     "file_link": "https://drive.google.com"
   },
   {
+    "file_name": "Presentation",
     "file_type": "Google Slide",
     "file_link": "https://slides.google.com"
   },
   {
+    "file_name": "Statistics",
     "file_type": "Google Sheet",
     "file_link": "https://sheets.google.com"
   }
