--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@clerk/nextjs": "^4.25.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
