--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "next": "^13.5.4",
