--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-id-generator": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "latest",
