--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.25.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@vercel/analytics": "^1.1.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "next": "^13.5.4",
