--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.25.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@tanstack/react-query": "^5.15.0",
     "@vercel/analytics": "^1.1.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
@@ -20,6 +21,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "sonner": "^1.0.3"
   },
   "devDependencies": {
